# SudokuSolver

./: .gitignore  README.md
Sudoku Solver Rust/sudoku/: Cargo.toml
Sudoku Solver Rust/sudoku-solver-rs/src/: main.rs  sudoku.rs
Sudoku Solver Rust/sudoku_solver/: Cargo.toml
Sudoku Solver Rust/sudoku_solver/benches/: my_benchmark.rs
Sudoku Solver Rust/sudoku_solver/src/: main.rs  sudoku.rs
Sudoku Solver Rust/sudoku_solver/src/sudoku/: generate.rs
Sudoku Solver Rust/sudoku_solver/sudoku/src/: lib.rs  tests.rs
Sudoku solver/: Sudoku solver.sln
Sudoku solver/Sudoku solver/: GUI.py  Sudoku solver.pyproj  SudokuSolver.py  Sudoku_solver.py  module1.py
puzzle_generator/: puzzle_generator.py
puzzle_generator/puzzles/: easy.txt  expert.txt  hard.txt  medium.txt
