[package]
name = "sudoku_solver"
version = "0.1.0"
authors = ["Walker Thornley <55719041+thornleywalker@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku = {path = "sudoku"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false